--- a/sarjanumero/ipad.css
+++ b/sarjanumero/ipad.css
@@ -24,7 +24,7 @@ body {
 }
 
 h1 {
-  margin: 0;
+  margin: 6px 0;
   font-size: 1.2em;
   font-weight: bold;
 }
@@ -160,6 +160,8 @@ input[type="button"] {
 .header_button {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
+  position:relative;
+  top:6px;
   border-radius: 0px;
   padding:20px;
   font-size:1em;
