--- a/sarjanumero/ipad.css
+++ b/sarjanumero/ipad.css
@@ -309,3 +309,13 @@ th {
   float:left;
   text-align:center;
 }
+
+
+.tapfocus {
+  width:100px; height:100px;
+  border:1px solid #AEAEAE;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background-color:#FFEBC1;
+}
