--- a/inc/pupesoft.css
+++ b/inc/pupesoft.css
@@ -1,8 +1,12 @@
-
 * {
 	font-size: 10pt;
 	font-weight: normal;
-	font-family: "Helvetica",Arial,Verdana,Lucida;
+	font-family: "Lato","Helvetica",Arial,Verdana,Lucida;
+}
+
+@font-face {
+	font-family: "Lato";
+	src: url("https://fonts.googleapis.com/css?family=Lato");
 }
 
 body {
@@ -271,7 +275,7 @@ button, input[type=submit], input[type=button] {
  	border : solid 0px #ffffff;
  	font-size: 12pt;
  	color : #ffffff;
- 	padding: 7px 5px 7px 5px;
+ 	padding: 10px 10px 10px 10px;
   background-color: #828282;
   min-width: 100px;
 }
