Headia vähän tummemmaksi

--- a/inc/pupesoft.css
+++ b/inc/pupesoft.css
@@ -132,7 +132,7 @@ pre {
 
 .head {
 	font-size: 22pt;
-	color: #b3b3b3; /*HEAD_COLOR*/
+	color: #939393; /*HEAD_COLOR*/
 	letter-spacing: 1px;
 }
 
