--- a/inc/pupesoft.css
+++ b/inc/pupesoft.css
@@ -248,6 +248,14 @@ table.indexvas td {
   padding: 3px 15px 3px 15px;
 }
 
+table.indexvas td.first {
+  padding: 12px 15px 3px 15px;
+}
+
+table.indexvas td.last {
+  padding: 3px 15px 12px 15px;
+}
+
 table.indexvas a {
   font-size: 13pt;
   color: #6c70eb;
