--- a/inc/pupesoft.css
+++ b/inc/pupesoft.css
@@ -248,11 +248,11 @@ table.indexvas td {
   padding: 3px 15px 3px 15px;
 }
 
-table.indexvas td.first {
+table.indexvas tr:first-child td {
   padding: 12px 15px 3px 15px;
 }
 
-table.indexvas td.last {
+table.indexvas tr:last-child td {
   padding: 3px 15px 12px 15px;
 }
 
