--- a/sarjanumero/ipad.css
+++ b/sarjanumero/ipad.css
@@ -358,6 +358,16 @@ th {
 }
 
 .alue_2 {
-  background-color:pink;
+  background-color:#eeeeff;
 }
+
+.tilaus_alue {
+  border:1px solid #A4A4A4;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  background-color:#eeeeff
+}
+
+.haettu {color:green}
 
