--- a/css/pupesoft.css
+++ b/css/pupesoft.css
@@ -240,3 +240,10 @@ table.responsive td input[type=text] {
 .del {
   text-decoration: line-through;
 }
+
+.kalepad {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 3px;
+  padding-right:3px;
+}
